# Machine-Learning-Models

./: Dockerfile  README.md  backup_db_models.py  config.py  docker-compose.yml  main.py  pyproject.toml
src/db_api/: database_manager.py  sqlalchemy_model.py
src/fast_api/: Dockerfile_fastapi  app.py
src/metals_api/: metals_api.py
src/model/: model.py
src/utils/: logger.py
